# linux-malware

./: .gitmodules  ATT&CK.md  ATTACK.md  README.md
articles/: http___hick.org_code_skape_papers_needle.txt.html  http___it.rising.com.cn_fanglesuo_19851.html  http___lists.openstack.org_pipermail_openstack_2013-December_004138.html  http___securelist.com_backdoored-free-download-manager-linux-malware_110465_.html  http___shell-storm.org_api_?s=arm.html  http___www.afn.org_~afn28925_wipe.c.html  http___www.cverc.org.cn_head_zhaiyao_news20220218-1.htm  http___www.foo.be_cours_dess-20042005_report_bigwar.html#sc.html  http___www.h-online.com_open_news_item_MyBB-downloads-were-infected-1366300.html.html  http___www.nth-dimension.org.uk_downloads.php?id=77.html  http___www.ouah.org_LKM_HACKING.html.html  http___www.thedarkside.nl_honeypot_microbul.html.html  https___analyze.intezer.com_analyses_a615dc5e-fbae-4238-ba48-8af7cf647146?utm_source=Twitter.html  https___analyze.intezer.com_files_82aa04f8576ea573a4772db09ee245cab8eac7ff1e7200f0cc960d8b6f516e92.html  https___analyze.intezer.com_files_85e72976b9448295034a8d4c26462b8f1ebe1ca0a4e4b897c7f2404d0de948c2.html  https___archive.org_details_HalLinuxForensics.html  https___arstechnica.com_information-technology_2012_09_questions-abound-as-malicious-phpmyadmin-backdoor-found-on-sourceforge-site_.html  https___asec.ahnlab.com_en_45182_.html  https___asec.ahnlab.com_en_49769_.html  https___asec.ahnlab.com_en_50316_.html  https___asec.ahnlab.com_en_51908_.html  https___asec.ahnlab.com_en_54647_.html  https___asec.ahnlab.com_en_55229_.html  https___asec.ahnlab.com_en_55785_.html  https___asec.ahnlab.com_ko_55070_.html  https___atdotde.blogspot.com_2020_05_high-performance-hackers.html.html  https___bazaar.abuse.ch_.html  https___bazaar.abuse.ch_browse.php?search=tag0X0P+0elf.html  https___bazaar.abuse.ch_browse_signature_Gafgyt_.html  https___bazaar.abuse.ch_browse_signature_Mirai_.html  https___bazaar.abuse.ch_browse_signature_SystemBC_.html  https___bazaar.abuse.ch_browse_signature_XorDDoS_.html  https___bazaar.abuse.ch_browse_tag_Symbiote_.html  https___bazaar.abuse.ch_browse_tag_blackcat_.html  https___bazaar.abuse.ch_browse_tag_elf_.html  (+460 more)
detection/kernel-event-collector-module/bpf_probe/src/: BpfApi.cpp  BpfProgram.cpp  CMakeLists.txt  bcc_sensor.c  check_probe.cpp  constants.cmake  generate.sh
detection/kernel-event-collector-module/bpf_probe/src/tests/: BpfApi_tests.cpp  CMakeLists.txt  RunAllTests.cpp
doc/: AUTHORS  HACKING
intel/: LM10.json  LM100.json  (+781 more)
(+318 files in other folders)
